# myUtil

./: .gitignore  CMakeLists.txt  README.md  main.cpp
ffmpeg/: convert.hpp  readFile.hpp  writeFile.hpp
